[metadata]
# replace with your username:
name = pythoncalculator
version = 0.0.1
author = Lauren Olinger
author_email = blahblah
description = Perform basic calculations in python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/laurenkolinger/test_pythoncalc
project_urls =
    Bug Tracker = https://github.com/laurenkolinger/test_pythoncalc/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
